* re-arranging primary nav items - bringing 'search' and 'order' in line with tabs on desktop * more margin / spacing cleanup * fixing weirdness with mobile products off-canvas nav

--- a/src/sass/bootstrap/_header.scss
+++ b/src/sass/bootstrap/_header.scss
@@ -175,8 +175,7 @@
 
       // desktop
       @media (min-width: $screen-sm-min) {
-        order: 1;
-        flex: 1 1 auto;
+        order: 2;
         margin: 2rem 1rem;
       }
 
@@ -187,11 +186,13 @@
     .primary-nav__logo {
 
       order: 2;
-      flex: 1 1 auto;
 
       // desktop
       @media (min-width: $screen-sm-min) {
+        order: 1;
+        width: 100%;
         margin: 2rem 1rem;
+        text-align: center;
       }
 
       img {
@@ -207,13 +208,13 @@
     }
     // END - LOGO
 
-    // START - CART
+    // START - CART / ORDER
     .primary-nav__cart {
 
       order: 4;
       // desktop
       @media (min-width: $screen-sm-min) {
-        order: 3;
+        order: 4;
         margin: 2rem 1rem;
       }
 
@@ -236,8 +237,8 @@
 
       // desktop
       @media (min-width: $screen-sm-min) {
-        width: 100%;
-        order: 4;
+        // width: 100%;
+        order: 3;
         margin-top: 2rem;
       }
 
@@ -284,18 +285,19 @@
             }
           }
 
-          a {
+          a, a:hover {
             text-transform: uppercase;
 
-            @media (min-width: $screen-sm-min) and (max-width: $screen-sm-min) {
-              font-size: 1.1rem;
-            }
+            // @media (min-width: $screen-sm-min) and (max-width: $screen-sm-min) {
+            //   font-size: 1.1rem;
+            // }
 
             // MOBILE
             @media (max-width: $screen-xs-max) {
               color: $white;
               text-transform: none;
               border-left: 4px solid transparent;
+              border-bottom: none;
             }
           }
 
@@ -462,7 +464,7 @@
 
     .navbar-header {
       width: 100%;
-      height: 60px;
+      height: 70px;
 
       .navbar-toggle {
         z-index: 9;
@@ -478,25 +480,7 @@
       }
     }
 
-    // START - MAIN NAV - mobile and desktop
-    .navbar-main {
 
-      .navbar-main__footer {
-        background-color: $brand-alt-emphasize;
-
-        .logo-list li {
-          width: 50%;
-
-          img {
-            margin: 0 auto;
-            max-width: 150px;
-            max-height: 26px;
-          }
-        }
-      }
-
-    }
-    // end .navbar-nav
     //
     //
     //
